--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.6.1",
+    "mongoose": "^8.13.2",
     "negotiator": "^1.0.0",
     "next": "15.2.4",
     "next-intl": "^4.0.2",
